[package]
name = "pandoc-bot-worker"
version = "0.1.0"
edition = "2021"


[dependencies]
pretty_env_logger = "0.4"
log = "0.4"

tokio = { version =  "1.8", features = [ "full" ] }
tokio-util = { version = "0.6.0", features = [ "codec" ]}
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
futures-lite = "1.12.0"

anyhow = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
bson = "2.3.0"

lapin = "2.1.1"
